Fix dark mode text colors in hero

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -3,6 +3,14 @@
   height: 160px;
 }
 
+.heroBanner :global(.hero__title) {
+  color: white;
+}
+
+.heroBanner :global(.hero__subtitle) {
+  color: white;
+}
+
 @media screen and (max-width: 996px) {
   .heroLogo {
     width: 128px;
